# moderncpp

./: CMakeLists.txt  Readme.md
.github/workflows/: build-test.yaml  lint-test-build.yaml
apps/example/: CMakeLists.txt  main.cpp
packageName/: CMakeLists.txt
packageName/core/: CMakeLists.txt  dummy.cpp  dummy.hpp  dummy.test.cpp
tests/: CMakeLists.txt
